Follows new postcss runner guidelines
* uses async API
* special output for CSS syntax errors
* shows plugin warnings

Closes #1.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "keywords": [
     "broccoli-plugin",
     "css",
+    "postcss-runner",
     "postcss"
   ],
   "author": "Jeff Jewiss <jeffjewiss@gmail.com>",
