--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "keywords": [
     "broccoli-plugin",
     "css",
-    "postcss-runner",
-    "postcss"
+    "postcss",
+    "postcss-runner"
   ],
   "author": "Jeff Jewiss <jeffjewiss@gmail.com>",
   "license": "MIT",
@@ -25,11 +25,14 @@
   "dependencies": {
     "broccoli-caching-writer": "^0.5.5",
     "mkdirp": "^0.5.0",
+    "object-assign": "^3.0.0",
     "postcss": "^4.1.9"
   },
   "devDependencies": {
-    "postcss-pseudoelements": "^2.1.1",
+    "async": "^1.2.1",
     "broccoli": "^0.15.3",
-    "mocha": "*"
+    "mocha": "*",
+    "postcss-pseudoelements": "^2.1.1",
+    "rimraf": "^2.4.0"
   }
 }
