--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/jeffjewiss/broccoli-postcss",
   "dependencies": {
-    "broccoli-caching-writer": "^2.1.0",
+    "broccoli-filter": "^0.1.14",
     "include-path-searcher": "0.1.0",
     "mkdirp": "^0.5.0",
     "object-assign": "^3.0.0",
@@ -32,7 +32,7 @@
   "devDependencies": {
     "async": "^1.2.1",
     "broccoli": "^0.15.3",
-    "glob": "^5.0.0",
+    "glob": "^5.0.14",
     "mocha": "*",
     "postcss-pseudoelements": "^2.1.1",
     "rimraf": "^2.4.0"
