--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "async": "^1.2.1",
     "broccoli": "^0.15.3",
+    "glob": "^5.0.0",
     "mocha": "*",
     "postcss-pseudoelements": "^2.1.1",
     "rimraf": "^2.4.0"
