--- a/package.json
+++ b/package.json
@@ -23,15 +23,13 @@
   },
   "homepage": "https://github.com/jeffjewiss/broccoli-postcss",
   "dependencies": {
-    "broccoli-caching-writer": "^2.1.0",
-    "include-path-searcher": "0.1.0",
-    "mkdirp": "^0.5.0",
+    "broccoli-persistent-filter": "^1.1.6",
     "object-assign": "^3.0.0",
     "postcss": "^5.0.4"
   },
   "devDependencies": {
     "async": "^1.2.1",
-    "broccoli": "^0.15.3",
+    "broccoli": "^0.16.9",
     "glob": "^5.0.0",
     "mocha": "*",
     "postcss-pseudoelements": "^2.1.1",
