--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/jeffjewiss/broccoli-postcss",
   "dependencies": {
-    "broccoli-filter": "^0.1.14",
+    "broccoli-multi-filter": "^1.2.3-multi.1",
     "include-path-searcher": "0.1.0",
     "mkdirp": "^0.5.0",
     "object-assign": "^3.0.0",
