--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
   "devDependencies": {
     "async": "^1.2.1",
     "broccoli": "^0.16.9",
+    "coveralls": "2.11.8",
     "glob": "^7.0.3",
     "mocha": "*",
-    "postcss-pseudoelements": "^3.0.0",
     "nyc": "6.1.1",
-    "postcss-pseudoelements": "^2.1.1",
+    "postcss-pseudoelements": "^3.0.0",
     "rimraf": "^2.4.0"
   }
 }
