--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "nyc mocha",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "lint": "standard",
+    "lint": "standard --verbose | snazzy",
     "prepublish": "npm run lint && npm test"
   },
   "engines": {
@@ -42,6 +42,7 @@
     "nyc": "7.1.0",
     "postcss-pseudoelements": "^3.0.0",
     "rimraf": "^2.4.0",
+    "snazzy": "4.0.0",
     "standard": "7.1.2"
   }
 }
