--- a/package.json
+++ b/package.json
@@ -29,20 +29,20 @@
   },
   "homepage": "https://github.com/jeffjewiss/broccoli-postcss",
   "dependencies": {
-    "broccoli-persistent-filter": "^1.1.6",
-    "object-assign": "^4.1.0",
-    "postcss": "^5.2.4"
+    "broccoli-persistent-filter": "1.2.13",
+    "object-assign": "4.1.0",
+    "postcss": "5.2.8"
   },
   "devDependencies": {
-    "async": "^2.0.0",
+    "async": "^2.1.0",
     "broccoli": "^1.1.0",
-    "coveralls": "2.11.15",
-    "glob": "^7.0.3",
-    "mocha": "*",
-    "nyc": "10.0.0",
+    "coveralls": "^2.11.15",
+    "glob": "^7.1.0",
+    "mocha": "^3.2.0",
+    "nyc": "^10.0.0",
     "postcss-pseudoelements": "^3.0.0",
-    "rimraf": "^2.4.0",
-    "snazzy": "5.0.0",
-    "standard": "8.6.0"
+    "rimraf": "^2.5.0",
+    "snazzy": "^5.0.0",
+    "standard": "^8.6.0"
   }
 }
