--- a/package.json
+++ b/package.json
@@ -32,16 +32,18 @@
     "broccoli-funnel": "1.1.0",
     "broccoli-persistent-filter": "1.2.13",
     "object-assign": "4.1.1",
-    "postcss": "5.2.16"
+    "postcss": "5.2.17"
   },
   "devDependencies": {
     "async": "^2.1.0",
     "broccoli": "^1.1.0",
     "coveralls": "^2.11.15",
-    "eslint": "^3.17.1",
-    "eslint-config-standard": "7.0.0",
-    "eslint-plugin-promise": "3.5.0",
-    "eslint-plugin-standard": "2.1.1",
+    "eslint": "^3.19.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-node": "^4.2.2",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "glob": "^7.1.0",
     "mocha": "^3.2.0",
     "nyc": "^10.0.0",
