--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prepublish": "npm run lint && npm test"
   },
   "engines": {
-    "node": "^4.5 || 6.* || 7.*"
+    "node": "^4.5 || ^6 || ^7 || ^8"
   },
   "keywords": [
     "broccoli-plugin",
