--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "nyc mocha",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "lint": "eslint test *.js",
-    "prepublish": "npm run lint && npm test"
+    "prepublishOnly": "npm run lint && npm test"
   },
   "engines": {
     "node": "^4.5 || ^6 || ^7 || ^8"
