--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "engines": {
     "node": "^4.5 || ^6 || ^7 || ^8"
   },
+  "files": ["index.js"],
   "keywords": [
     "broccoli-plugin",
     "css",
