--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "broccoli-postcss",
-  "version": "3.5.1",
+  "version": "3.5.2",
   "description": "Postcss compiler for Broccoli",
   "main": "index.js",
   "repository": {
@@ -16,7 +16,9 @@
   "engines": {
     "node": "^4.5 || ^6 || ^7 || ^8 || ^9"
   },
-  "files": ["index.js"],
+  "files": [
+    "index.js"
+  ],
   "keywords": [
     "broccoli-plugin",
     "css",
