--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
   "engines": {
     "node": "^4.5 || ^6 || ^7 || ^8 || ^9 || ^10"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint"
+    }
+  },
   "files": [
     "index.js"
   ],
@@ -48,6 +53,7 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
     "glob": "^7.1.0",
+    "husky": "1.0.0-rc.8",
     "mocha": "^5.0.0",
     "nyc": "^11.0.2",
     "postcss-color-rebeccapurple": "^3.0.0",
