--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prepublishOnly": "npm run lint && npm test"
   },
   "engines": {
-    "node": "^4.5 || ^6 || ^7 || ^8 || ^9 || ^10"
+    "node": ">= 6.9"
   },
   "husky": {
     "hooks": {
