--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -5,12 +5,13 @@ environment:
   matrix:
     - nodejs_version: "6"
     - nodejs_version: "8"
-    - nodejs_version: "9"
+    - nodejs_version: "10"
 
 # Install scripts. (runs after repo cloning)
 install:
   - ps: Install-Product node $env:nodejs_version
-  - appveyor-retry yarn
+  - appveyor-retry npm i -g npm@6
+  - appveyor-retry npm ci
 
 # Post-install test scripts.
 test_script:
@@ -18,13 +19,11 @@ test_script:
   - git rev-parse HEAD
   - node --version
   - npm --version
-  - yarn --version
-  - yarn lint
-  - yarn test
+  - npm run lint
+  - npm test
 
 # Don't actually build.
 build: off
 
 # Set build version format here instead of in the admin panel.
 version: "{build}"
-
