--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,9 @@ node_js:
   - 8
   - 6
 before_install:
-  - yarn config set no-progress
-  - yarn global add greenkeeper-lockfile@1
+  - npm i -g install npm@6
 install:
-  - yarn
-before_script: greenkeeper-lockfile-update
-after_script: greenkeeper-lockfile-upload
+  - npm ci
 notifications:
   email: true
 after_success: npm run coverage
