--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "nyc mocha",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "lint": "eslint test *.js",
+    "lint": "eslint .",
     "prepublishOnly": "npm run lint && npm test"
   },
   "engines": {
@@ -39,10 +39,10 @@
   },
   "homepage": "https://github.com/jeffjewiss/broccoli-postcss",
   "dependencies": {
-    "broccoli-funnel": "2.0.1",
-    "broccoli-persistent-filter": "2.1.0",
-    "object-assign": "4.1.1",
-    "postcss": "7.0.5"
+    "broccoli-funnel": "^2.0.1",
+    "broccoli-persistent-filter": "^2.1.0",
+    "object-assign": "^4.1.1",
+    "postcss": "^7.0.5"
   },
   "devDependencies": {
     "async": "^2.1.0",
