--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "prepublishOnly": "npm run lint && npm test"
   },
   "engines": {
-    "node": ">= 6.9",
-    "yarn": "YARN NO LONGER USED - use npm instead."
+    "node": ">= 6.9"
   },
   "husky": {
     "hooks": {
